# dictiopy

./: README.md  dicti.py  dictio.py  pyproject.toml
src/dictiopy/: dictio.py
