[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dictiopy"
version = "0.2.0"
authors = [
  { name="Chen Yu-Qiao", email="chenyqmy@gmail.com" },
]
dependencies = [
    "requests",
    'click'
]
description = "A cli english dictionary"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
dictio = "dictiopy.dictio:main"
